[gd_scene load_steps=7 format=2]

[ext_resource path="res://artifact_ss/arti_sprite1.png" type="Texture" id=1]
[ext_resource path="res://Info_Collider.gd" type="Script" id=2]
[ext_resource path="res://keyboard_key_z.png" type="Texture" id=3]
[ext_resource path="res://Textbox.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 65, 28 )

[node name="Info_Collider" type="StaticBody2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 0, -64 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="ZBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZBox"]
shape = SubResource( 2 )
one_way_collision_margin = 0.0

[node name="Textbox" parent="." instance=ExtResource( 4 )]

[connection signal="body_entered" from="ZBox" to="." method="_on_ZBox_body_entered"]
[connection signal="body_exited" from="ZBox" to="." method="_on_ZBox_body_exited"]
